--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
+    "next": "15.2.3",
     "react": "^19.0.0",
+    "react-compare-image": "^3.5.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.3"
+    "react-google-recaptcha": "^3.1.0",
+    "recaptcha-v3": "^1.11.3",
+    "resend": "^4.1.2",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "@eslint/eslintrc": "^3"
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.17"
   }
 }
